--- a/Soapui/pom.xml
+++ b/Soapui/pom.xml
@@ -14,6 +14,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+ 
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -22,4 +23,13 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <build>  
+        <plugins>
+            <plugin>
+                <groupId>soapui</groupId>
+                <artifactId>soapui-pro-maven-plugin</artifactId>
+                <version>5.1.2</version>             
+            </plugin>
+         </plugins>   
+    </build>
 </project>
