--- a/Soapui/.classpath
+++ b/Soapui/.classpath
@@ -14,6 +14,7 @@
 	</classpathentry>
 	<classpathentry kind="src" path="project_xml"/>
 	<classpathentry kind="src" path="project_report"/>
+	<classpathentry kind="src" path="bin"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
@@ -24,5 +25,10 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="bin/soapui-maven-plugin-5.1.2.jar"/>
+	<classpathentry kind="lib" path="bin/soapui-maven-plugin-5.1.2-m-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Administrator/Desktop/soapui-maven-plugin-5.1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Administrator/Desktop/soapui-maven-plugin-5.1.2-m-SNAPSHOT.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
