--- a/Soapui/.classpath
+++ b/Soapui/.classpath
@@ -15,20 +15,16 @@
 	<classpathentry kind="src" path="project_xml"/>
 	<classpathentry kind="src" path="project_report"/>
 	<classpathentry kind="src" path="bin"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="bin/soapui-maven-plugin-5.1.2.jar"/>
-	<classpathentry kind="lib" path="bin/soapui-maven-plugin-5.1.2-m-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Administrator/Desktop/soapui-maven-plugin-5.1.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Administrator/Desktop/soapui-maven-plugin-5.1.2-m-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="bin/soapui-maven-plugin-5.1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="bin/soapui-maven-plugin-5.1.2-m-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Administrator/Desktop/soapui-maven-plugin-5.1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Administrator/Desktop/soapui-maven-plugin-5.1.2-m-SNAPSHOT.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
