--- a/Soapui/pom.xml
+++ b/Soapui/pom.xml
@@ -8,16 +8,16 @@
         <artifactId>soapui-project</artifactId>
         <version>5.1.2</version>
     </parent> -->
-     <groupId>com.smartbear.samples</groupId>
+     <groupId>com.smartbear.soapui</groupId>
      <artifactId>soapui-maven2-plugin</artifactId>
   	 <version>0.0.1-SNAPSHOT</version>
-     <packaging>jar</packaging>
-
+  	 <packaging>jar</packaging>
+     
   	 <name>Maven 2 SoapUI Sample</name>
   	 <url>http://maven.apache.org</url>
 	
      <description>Documentation: http://www.soapui.org/Test-Automation/maven-2x.html</description>
-
+     
     
     <pluginRepositories>
         <pluginRepository>
@@ -38,7 +38,7 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-    
+
     
   </dependencies>
   
@@ -62,6 +62,8 @@
 								<copy file="pom.xml"
 									tofile="${project.build.directory}/maven-soapui-plugin-${project.version}.pom" />
 							</tasks>
+							
+							
 						</configuration>
 						<goals>
 							<goal>run</goal>
@@ -75,7 +77,7 @@
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
 					<descriptors>
-						<descriptor>src/project_xml/IMUserInfo-soapui-project.xml</descriptor>
+						<descriptor>F:/TestSoapUI/TestSoapUI/Soapui/project_xml/IMUserInfo-soapui-project.xml</descriptor>
 					</descriptors>
 				</configuration>
 			</plugin>
@@ -83,20 +85,78 @@
   			    <groupId>com.smartbear.soapui</groupId> 
                 <artifactId>soapui-pro-maven-plugin</artifactId>
                 <version>5.1.2</version> 
+                
+                <dependencies>  
+                   <dependency>  
+                       <groupId> org.reflections</groupId >  
+                       <artifactId>reflections</artifactId >  
+                       <version> 0.9.9-RC1</version >  
+                       </dependency>  
+                       <dependency>  
+                         <groupId>org.apache.poi</groupId >  
+                         <artifactId>poi-ooxml</artifactId>  
+                         <version>3.10-FINAL</version >  
+                         </dependency> 
+ <!--                          
+                         <dependency>
+                           <groupId>ru.yandex.qatools.allure</groupId>
+                           <artifactId>allure-maven-plugin</artifactId>
+                           <version>2.3</version>
+                         </dependency>
+                         
+                        <dependency>
+                          <groupId>ru.yandex.qatools.allure</groupId>
+                          <artifactId>allure-testng-adaptor</artifactId>
+                          <version>1.4.14</version>
+                        </dependency>
+-->         
+                   </dependencies>  
+                   
 				<executions>
                     <execution>
-                        <id>SoapuiIMUser</id>
+                        <id>ReportList</id>
                         <phase>test</phase>
                         <goals>
                             <goal>test</goal>
                         </goals>
                         <configuration>
-                            <projectFile>src/project_xml/IMUserInfo-soapui-project.xml</projectFile>
-                            <host>http://121.40.167.147/v1/users</host>
-                            <outputFolder>src/project_report/</outputFolder>
+                            <projectFile>F:/TestSoapUI/TestSoapUI/Soapui/project_xml/ReportList.xml</projectFile>
+<!--                             <host>http://121.40.167.147:3005</host> --> 
+                            <outputFolder>F:/TestSoapUI/TestSoapUI/Soapui/project_report/</outputFolder>
+                            <reportFormat>ReportList</reportFormat>
+                            <reportName>TestCase Report</reportName>
+                            <testSuite>ReportList</testSuite>
                             <junitReport>true</junitReport>
                             <printReport>true</printReport>
+                            <exportAll>true</exportAll>
+<!--                            
+                           <soapuiProperties>
+                               <property>
+                                 <name>soapui.home</name>
+                                 <value>D:/Program Files/SmartBear/SoapUI-Pro-5.1.2/bin</value>
+                               </property>
+                               <property>
+                                    <name>soapui.logroot</name>
+                                    <value>D:/Program Files/SmartBear/SoapUI-Pro-5.1.2/bin/</value>
+                                </property>
+                                 <property>
+                                        <name>soapui.scripting.library</name>
+                                        <value>D:\Program Files\SmartBear\SoapUI-Pro-5.1.2\lib\</value>
+                                 </property>
+                          </soapuiProperties>
+                          <properties> 
+                             <property> 
+                             <name>listener</name> 
+                             <value>ru.yandex.qatools.allure.junit.AllureRunListener</value> 
+                             </property> 
+                          </properties>
+                          
                             
+                            
+                              
+                            <junitReport>true</junitReport>
+                            <printReport>true</printReport>
+                           
                             <projectProperties>
                                 <value>appId=gjk001001</value>
                                 <value>thirdUserId=1111111111</value>
@@ -104,7 +164,7 @@
                                 <value>nickname=lucy2</value>
                                 <value>source=http://img.example.com/avatar.jpg</value>                       
                             </projectProperties>
-                            
+                             
                             <soapuiProperties>
                                 <property>
                                     <name>soapui.logroot</name>
@@ -115,7 +175,7 @@
                                         <value>src/test/resources</value>
                                  </property>
                             </soapuiProperties>
-                             
+-->                             
                         </configuration>
                     </execution>
                 </executions>
@@ -123,4 +183,22 @@
 			
 		</plugins>
 	</build>
+	
+ 
+	<reporting>
+           <excludeDefaults>true</excludeDefaults>
+      <plugins>
+          <plugin>
+              <groupId>ru.yandex.qatools.allure</groupId>
+              <artifactId>allure-maven-plugin</artifactId>
+              <version>2.7</version>
+          </plugin>
+          <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-surefire-report-plugin</artifactId>
+               <version>2.18.1</version>
+           </plugin>
+      </plugins>
+   </reporting>
+
 </project>
