--- a/Soapui/pom.xml
+++ b/Soapui/pom.xml
@@ -97,11 +97,11 @@
                          <artifactId>poi-ooxml</artifactId>  
                          <version>3.10-FINAL</version >  
                          </dependency> 
- <!--                          
+                          
                          <dependency>
                            <groupId>ru.yandex.qatools.allure</groupId>
                            <artifactId>allure-maven-plugin</artifactId>
-                           <version>2.3</version>
+                           <version>2.3-SNAPSHOT</version>
                          </dependency>
                          
                         <dependency>
@@ -109,7 +109,7 @@
                           <artifactId>allure-testng-adaptor</artifactId>
                           <version>1.4.14</version>
                         </dependency>
--->         
+<!-- -->         
                    </dependencies>  
                    
 				<executions>
@@ -129,7 +129,7 @@
                             <junitReport>true</junitReport>
                             <printReport>true</printReport>
                             <exportAll>true</exportAll>
-<!--                            
+                            
                            <soapuiProperties>
                                <property>
                                  <name>soapui.home</name>
@@ -137,12 +137,12 @@
                                </property>
                                <property>
                                     <name>soapui.logroot</name>
-                                    <value>D:/Program Files/SmartBear/SoapUI-Pro-5.1.2/bin/</value>
-                                </property>
-                                 <property>
-                                        <name>soapui.scripting.library</name>
-                                        <value>D:\Program Files\SmartBear\SoapUI-Pro-5.1.2\lib\</value>
-                                 </property>
+                                    <value>F:/TestSoapUI/TestSoapUI/Soapui/</value>
+                               </property>
+                               <property>
+                                    <name>soapui.scripting.library</name>
+                                    <value>F:\TestSoapUI\TestSoapUI\Soapui\bin\</value>
+                               </property>
                           </soapuiProperties>
                           <properties> 
                              <property> 
@@ -151,7 +151,7 @@
                              </property> 
                           </properties>
                           
-                            
+ <!--                           
                             
                               
                             <junitReport>true</junitReport>
