--- a/Soapui/pom.xml
+++ b/Soapui/pom.xml
@@ -61,9 +61,7 @@
 							<tasks>
 								<copy file="pom.xml"
 									tofile="${project.build.directory}/maven-soapui-plugin-${project.version}.pom" />
-							</tasks>
-							
-							
+							</tasks>														
 						</configuration>
 						<goals>
 							<goal>run</goal>
@@ -97,11 +95,11 @@
                          <artifactId>poi-ooxml</artifactId>  
                          <version>3.10-FINAL</version >  
                          </dependency> 
-                          
+ <!--                         
                          <dependency>
                            <groupId>ru.yandex.qatools.allure</groupId>
                            <artifactId>allure-maven-plugin</artifactId>
-                           <version>2.3-SNAPSHOT</version>
+                           <version>2.3</version>
                          </dependency>
                          
                         <dependency>
@@ -109,7 +107,13 @@
                           <artifactId>allure-testng-adaptor</artifactId>
                           <version>1.4.14</version>
                         </dependency>
-<!-- -->         
+                        
+ -->         
+ 					    <dependency>
+                          <groupId>org.apache.maven</groupId>
+                          <artifactId>maven-plugin-api</artifactId>
+                          <version>2.0.4</version>
+                        </dependency>
                    </dependencies>  
                    
 				<executions>
@@ -191,7 +195,7 @@
           <plugin>
               <groupId>ru.yandex.qatools.allure</groupId>
               <artifactId>allure-maven-plugin</artifactId>
-              <version>2.7</version>
+              <version>2.3</version>
           </plugin>
           <plugin>
                <groupId>org.apache.maven.plugins</groupId>
