--- a/Soapui/.classpath
+++ b/Soapui/.classpath
@@ -23,8 +23,8 @@
 	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="bin/soapui-maven-plugin-5.1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="bin/soapui-maven-plugin-5.1.2-m-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/Administrator/Desktop/soapui-maven-plugin-5.1.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/Administrator/Desktop/soapui-maven-plugin-5.1.2-m-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="bin/saxon-8.7.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
+	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
